# harnesscad

./: .gitattributes  .gitignore  CADBIBLE_REPO_IDEAS.md  CAD_CORPUS_AUDIT.md  CAD_CORPUS_COVERAGE.md  README.md  TEXT_TO_CAD_PAPER_IDEAS.md  THIRD-PARTY.md  annomap_parser.py  annomap_scoring.py  anomaly.py  cadreview_blocks.py  cadreview_correct.py  cadreview_detect.py  cadreview_errorgen.py  cadreview_quantize.py  cadreview_review.py  cadsmith_design_plan.py  cadsmith_error_patterns.py  cadsmith_escalation.py  cadsmith_kernel_metrics.py  cadsmith_three_view.py  cadtalk_label_transfer.py  cadtalk_parser.py  cadtalk_primitive_program.py  cadtalk_voting.py  cfd_gradient_variance.py  cfd_integral_noise.py  cfd_sphere_square_map.py  chatcadplus_prob2text.py  checks_assembly.py  checks_compliance.py  checks_dfm.py  checks_geometry.py  checks_interference.py  checks_reference.py  checks_requirements.py  checks_standards.py  checks_vision.py  clarify_ambiguity.py  (+34 more)
.claude-plugin/: marketplace.json
a2a/: __init__.py  messages.py  task.py
adapters/: __init__.py  base.py  cadhub_language_registry.py  ccc_backend_selector.py  ccc_codecad_ecosystem.py  ccc_interop_matrix.py  fcai_freecad_tool_catalog.py  memory.py  rhino_contract.py  t2cblender_zoo_api_schema.py
agent/: __init__.py  attachments.py  cad_observation.py  cad_plan.py  edit_session.py  intent_resolution.py  planner.py  runner.py  system_prompt.py  toolcad_metrics.py  toolcad_reward.py  toolcad_trajectory.py
agents/: __init__.py  idea2cad_roles.py  idea2cad_workflow.py  overseer.py  roles.py  supervisor.py
audit/: CADBIBLE_LOOP.md  CAMPAIGN_LOOP.md  __init__.py  book_agentic_design_patterns.md  book_hitchhiker_agentic.md  book_hitchhiker_rl_eval.md  cad_idea_register.json  cadbible_progress.json  cisp_completeness.md  closure.py  cua_synthesis.md  followup_troves_report.md  inventory_algorithms_scar_tissue.md  inventory_fixtures_benchmarks.md  inventory_tables_schemas.md  inventory_taxonomies_prompts.md  pdd_synthesis.md  text_to_cad_progress.json  tier2_evidence.json
backends/: base.py  cadhub_concat_payload.py  cadhub_render_request.py  cadquery_backend.py  ocp_occt_api_catalog.py  stub.py
bench/: __init__.py  anomaly_splits.py  appearance_invariance.py  blenderllm_complexity.py  cad_qa.py  cadmium_mesh_metrics.py  cadrille_metrics.py  cadrille_orientation_align.py  cadtests_assertions.py  cadtests_metrics.py  cadtests_runner.py  cadvlm_metrics.py  candidate_scaling.py  cgb_cad_score.py  cgb_mesh_betti.py  cgb_run_summary.py  code_passk.py  command_metrics.py  compiler_judge.py  complexgen_complex_metrics.py  contrastcad_contrastive.py  contrastcad_recon_accuracy.py  creft_ortho_reasoning.py  criteria.py  cross_platform.py  datacon_diversity.py  davinci_inference_metrics.py  deepcad2_ae_accuracy.py  deepclustering_edge_protocol.py  deepclustering_ensemble.py  deepclustering_init_protocol.py  deepclustering_partition_metrics.py  diffusioncad_generation_metrics.py  e3dbench_pointmap_metrics.py  e3dbench_pose_metrics.py  edit_alignment.py  edit_metrics.py  engdesign_defect_confusion.py  engdesign_description_match.py  engdesign_dfm_scoring.py  (+105 more)
cisp/: annotations.py  explicit_context.py  ops.py  protocol.py
context/: __init__.py  comet_meta_tag_render.py  comet_progressive_tiers.py  manager.py  spectiling_components.py  spectiling_prompt.py  staging.py
dataengine/: __init__.py  active_learning.py  annotation_reconcile.py  annotation_scorecard.py  anomaly_distribution.py  anomaly_schema.py  bias_audit.py  cadeditor_edit_typing.py  cadrille_drcppo.py  cadvf_preference_pipeline.py  cadvf_visual_score.py  cascade_filter.py  cmecad_collab.py  cmecad_reward.py  code_modularity.py  comet_memory_consolidation.py  consensus.py  cot_records.py  cross_task_consistency.py  datacon_lowdata_dedup.py  distribution_audit.py  edit_caption.py  edit_filters.py  edit_pairs.py  edit_triplets.py  export.py  flexcad_infill_pairs.py  flexcad_masking.py  geocad_augment.py  geocad_prompt.py  gift_bootstrap_loop.py  gift_geometric_feedback.py  hierarchical_cad_annotation.py  histcad_spatial_relations.py  img2cadseq_knowledge.py  intent2exec_cot_schema.py  intent2exec_trs.py  knitcad_filters.py  pllm_confidence_score.py  prior_cache.py  (+19 more)
datagen/: __init__.py  anomaly_pairs.py  augment.py  brep_edit_pairs.py  code_comments.py  contrastcad_permute.py  contrastcad_rre.py  datacon_spoke_augment.py  designproc_bspline_metrics.py  designproc_procedure.py  designproc_program_synthesis.py  designproc_reference_surface.py  domain_randomization.py  evolution.py  evolution_validation.py  gencad3d_synthbal.py  generators.py  geometry_triplets.py  image_code_manifest.py  instruction_taxonomy.py  modifier_ablation.py  paired_sketch_prefix.py  parameter_qd.py  pipeline.py  pllm_program_augment.py  sketch_boolean.py  sketch_image_conditions.py  trace_slice.py  vitruvion_primitive_noise.py
docs/: blueprint.md
drawings/: __init__.py  annomap_scoring.py  annomap_spec.py  arcs_viewport_transform.py  autocad_dimension_geometry.py  autocad_linetype_dash.py  cad2program_canvas_layout.py  cad2program_view_lifting.py  cadtransformer_primitive_graph.py  creft_view_consistency.py  dimext_dimension_lines.py  muse2_svg_view_metrics.py  picasso_metrics.py  picasso_rasterizer.py  picasso_render_loss.py  picasso_self_supervision.py  sgraphs2_entity_render.py  sympoint_instance_cutmix.py  sympoint_query_grouping.py  t2cadtd_iso_ortho_consistency.py  t2cadtd_isometric_projection.py  t2cadtd_projection_convention.py  vitruvion_hand_drawn_noise.py
editing/: __init__.py  autocad_layout_ops.py  bidircsg_backward.py  bidircsg_navigation.py  cadeditor_partial_mask.py  cadmorph_loop.py  cadmorph_plan.py  cadmorph_verify.py  cadreasoner_beam.py  cadreasoner_discrepancy.py  cadreasoner_edit_loop.py  locate_infill.py  mrcad2_edit_degeneracy.py  mrcad_refinement.py  mrcad_schema.py  paramdirect_consistency.py  paramdirect_pseudofeature.py  paramdirect_synctech.py  (+3 more)
src/harnesscad/io/backends/truck_driver/: Cargo.toml
src/harnesscad/io/backends/truck_driver/src/: main.rs
(+3998 files in other folders)
