[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harnesscad"
version = "0.0.1"
description = "Native agentic harness for engineering/mechanical text-to-CAD"
requires-python = ">=3.10"
# Core spine is stdlib-only — no required runtime dependencies (yet).
dependencies = []

[project.optional-dependencies]
# OCCT-backed geometry backend (CadQuery / OpenCascade).
cadquery = ["cadquery>=2.4"]
# Provider-agnostic LLM layer (LiteLLM) + structured op output (Instructor).
llm = ["litellm>=1.0", "instructor>=1.0"]
# Real 2D sketch constraint solver (SolveSpace). Optional: the ConstraintGraph
# DOF analysis in constraints.py is stdlib-only; this extra adds the concrete
# geometric solve via constraints.SolveSpaceSketch.
constraints = ["python-solvespace"]

# The product code lives FLAT at the repo root. harnesscad is an application
# repo, not a pip library, so the layout is intentional: top-level packages and
# modules are the project itself rather than being nested under a src/ package.
[tool.setuptools]
py-modules = [
    "verify", "loop", "trace", "server", "cli", "checks_geometry",
    "pipeline", "contract", "constraints", "checks_dfm", "loopdetect",
    "guardrails", "routing", "render", "checks_vision", "observe", "grammar",
    "executor", "harness", "repair", "checks_assembly", "checks_interference",
    "estimate", "fitness", "checks_standards", "checks_compliance",
    "checks_requirements",
]
packages = [
    "cisp", "state", "backends", "llm", "agent", "memory", "bench",
    "context", "rag", "strategies", "agents", "a2a", "ui", "mcp",
    "dataengine", "datagen", "exploration", "spec", "skeleton", "sizing",
]
