[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harnesscad"
version = "0.0.1"
description = "Native agentic harness for engineering/mechanical text-to-CAD"
requires-python = ">=3.10"
# Core spine is stdlib-only — no required runtime dependencies (yet).
dependencies = []

[project.optional-dependencies]
# OCCT-backed geometry backend (CadQuery / OpenCascade).
cadquery = ["cadquery>=2.4"]
# Provider-agnostic LLM layer (LiteLLM) + structured op output (Instructor).
llm = ["litellm>=1.0", "instructor>=1.0"]
# Real 2D sketch constraint solver (SolveSpace). Optional: the ConstraintGraph
# DOF analysis in constraints.py is stdlib-only; this extra adds the concrete
# geometric solve via constraints.SolveSpaceSketch.
constraints = ["python-solvespace"]

# The product code is grouped into layer packages at the repo root, matching
# the blueprint's architecture bands: verifiers/ (the plural verifier),
# reliability/ (guardrails + strategies), surfaces/ (server/mcp/ui/render),
# quality/ (analysis), with the core spine (loop/harness/pipeline/cli/...) and
# the foundational packages (cisp/backends/state/...) alongside them.
[tool.setuptools]
py-modules = [
    "loop", "harness", "pipeline", "cli", "trace", "observe",
    "contract", "constraints", "grammar", "grammar_fsa", "routing",
    "cadreview_taxonomy", "cadreview_blocks", "cadreview_detect",
    "cadreview_errorgen", "cadreview_correct", "cadreview_review",
    "cadreview_quantize",
    "cadtalk_parser", "cadtalk_metrics", "cadtalk_voting",
    "cadtalk_primitive_program", "cadtalk_label_transfer",
    "cadsmith_design_plan", "cadsmith_error_patterns", "cadsmith_kernel_metrics",
    "cadsmith_three_view", "cadsmith_abs_metrics", "cadsmith_escalation",
    "cadsmith_tiers", "cadsmith_dual_loop",
]
packages = [
    # core spine + foundations
    "cisp", "state", "backends", "adapters", "llm", "agent", "agents", "a2a",
    # grounding
    "context", "rag", "memory",
    # the plural verifier
    "verifiers",
    # reliability (includes the search/repair strategies)
    "reliability", "reliability.strategies",
    # surfaces
    "surfaces", "surfaces.mcp", "surfaces.ui",
    # quality / analysis
    "quality",
    # data engine + eval + generation
    "dataengine", "datagen", "exploration", "bench",
    # front-of-pipeline + ingestion + parts
    "spec", "skeleton", "sizing", "ingest", "library", "standards",
    "editing", "reconstruction",
    # security and research governance
    "security", "research", "audit", "vision", "procedural", "formats", "geometry",
]
