[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harnesscad"
version = "0.1.0"
description = "Native agentic harness for engineering/mechanical text-to-CAD"
requires-python = ">=3.10"
# Core spine is stdlib-only — no required runtime dependencies (yet).
dependencies = []

[project.optional-dependencies]
# OCCT-backed geometry backend (CadQuery / OpenCascade).
cadquery = ["cadquery>=2.4"]
# Provider-agnostic LLM layer (LiteLLM) + structured op output (Instructor).
llm = ["litellm>=1.0", "instructor>=1.0"]
# Real 2D sketch constraint solver (SolveSpace). Optional: the ConstraintGraph
# DOF analysis in constraints.py is stdlib-only; this extra adds the concrete
# geometric solve via constraints.SolveSpaceSketch.
constraints = ["python-solvespace"]

[project.scripts]
harnesscad = "harnesscad.core.cli:main"

# src/ layout: a single `harnesscad` namespace with architectural layers.
# Previously 39 generic names (geometry, state, context, bench, ...) were
# claimed as top-level packages, which collided with the global namespace and
# meant the project only imported when the repo root happened to be on sys.path.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
