[package]
name = "harnesscad-truck-driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "harnesscad_truck_driver"
path = "src/main.rs"

# Versions pinned to the set that actually compiles and works together on
# rustc 1.96 (resolved once, then frozen here + in Cargo.lock). truck-modeling
# 0.6 is the newest that pulls a mutually-compatible meshalgo/shapeops/stepio.
[dependencies]
truck-modeling = "=0.6.0"
truck-meshalgo = "=0.4.0"
truck-shapeops = "=0.4.0"
truck-stepio = "=0.3.0"
truck-topology = "=0.6.0"
truck-polymesh = "=0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
